--- a/Lookbook.html
+++ b/Lookbook.html
@@ -1,7 +1,24 @@
-<form>
-    <button>ALL</button>
-    <button>BLACK</button>
-    <button>GRAY</button>
-    <button>BROWN</button>
-    <button>BLUE</button>
-</form>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>LOOKBOOK!</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="title">
+        <h1>코디 한 눈에 보기</h1>
+    </div>
+    <div class="button">
+        <button id = "All">ALL</button>
+        <button id = "Black">BLACK</button>
+        <button id = "Gray">GRAY</button>
+        <button id = "Brown">BROWN</button>
+        <button id = "Blue">BLUE</button>
+    </div>
+    <script src="app.js"></script>
+    <div class="clothes">
+
+    </div>
+</body>
+</html>
